--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,9 +16,113 @@
     <link rel="stylesheet" href="css/jquery.timepicker.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        /*導覽列-文字與間距*/
+        .nav-link {
+            font-size: 20px !important;
+            padding: 1rem 1rem 1rem 1rem !important;
+            font-weight: 700;
+            color: black;
+            position: relative;
+            text-transform: uppercase;
+            opacity: 1 !important;
+        }
+
+        /*導覽列文字-滑鼠掠過後效果*/
+        .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
+            color: deeppink !important;
+        }
+
+        /*導覽列底條-滑鼠掠過後效果*/
+        .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover:before {
+            visibility: visible;
+            background-color: #81a5ff !important;
+            -webkit-transform: scaleX(1);
+            -ms-transform: scaleX(1);
+            transform: scaleX(1);
+        }
+
+        /*導覽列底條-滑鼠掠過前效果**/
+        .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 3px;
+            bottom: 0px;
+            left: 0;
+            background-color: grey !important;
+            visibility: hidden;
+            -webkit-transform: scaleX(0);
+            -ms-transform: scaleX(0);
+            transform: scaleX(0);
+            -webkit-transition: all 0.1s ease-in-out 0s;
+            -o-transition: all 0.1s ease-in-out 0s;
+            transition: all 0.1s ease-in-out 0s;
+            z-index: -1;
+        }
+
+        /*導覽列-無連結文字滑鼠掠過後游標樣式-*/
+        li > span {
+            cursor: default;
+        }
+
+        /*導覽列下拉選單-框體*/
+        .dropdown-menu {
+            min-width: 100% !important;
+            padding: 0 !important;
+            margin: 0 !important;
+            text-align: center;
+            background-image: url('/images/_main.png') !important;
+            /*background-color: #81a5ff !important;*/
+            /*background-clip: padding-box;*/
+            /*border: 1px solid rgba(0, 0, 0, 0.15);*/
+            border-radius: 0 0 0.5rem 0.5rem !important;
+        }
+
+        /*與導覽列下拉選單-導覽列進行貼合*/
+        .dropdown:hover .dropdown-menu {
+            display: block;
+            margin-top: 0;
+        }
+
+        /*導覽列下拉選單-滑鼠掠過效果*/
+        .dropdown-item:hover, .dropdown-item:focus {
+            color: white !important;
+            background-color: #81a5ff !important;
+            text-shadow: 2px 2px 6px black !important;
+        }
+
+        /*導覽列下拉選單-物件*/
+        .dropdown-item {
+            display: block;
+            width: 100%;
+            padding: 0.25rem 1.5rem;
+            clear: both;
+            font-size: 18px !important;
+            font-weight: 600 !important;
+            color: #212529;
+            text-align: inherit;
+            white-space: nowrap;
+            background-color: transparent;
+            border: 0;
+        }
+
+        /*導覽列下拉選單-首物件取消邊角圓弧*/
+        .dropdown-item:first-child {
+            border-bottom-right-radius: 0 !important;
+            border-bottom-left-radius: 0 !important;
+        }
+
+        /*導覽列下拉選單-末物件設定邊角圓弧*/
+        .dropdown-item:last-child {
+            border-bottom-right-radius: 0.5rem !important;
+            border-bottom-left-radius: 0.5rem !important;
+        }
+    </style>
 </head>
 
 <body>
+
 <div class="wrap" style="background: #81a5ff;">
     <div class="container">
         <div class="row">
@@ -38,7 +142,8 @@
     </div>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light" id="ftco-navbar" style="background-image: url('/images/_main.png') !important;">
+<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light" id="ftco-navbar"
+     style="background-image: url('/images/_main.png') !important;">
     <div class="container">
         <a class="navbar-brand" href="http://localhost:8080/index"><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
@@ -48,18 +153,29 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a href="/index" class="nav-link">首頁</a></li>
-                <li class="nav-item"><a href="/public_shelter" class="nav-link">公立領養</a></li>
-                <li class="nav-item"><a href="/personal_shelter" class="nav-link">一般領養</a></li>
+                <!-- 下拉選單 -->
+                <li class="nav-item dropdown">
+                    <span class="nav-link dropdown-toggle" data-toggle="dropdown">認養毛孩</span>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/public_shelter">公立領養</a>
+                        <a class="dropdown-item" href="/personal_shelter">一般領養</a>
+                    </div>
+                </li>
+
                 <li class="nav-item"><a href="/missing" class="nav-link">走失協尋</a></li>
-                <li class="nav-item"><a href="/publish" class="nav-link">刊登送養</a></li>
                 <li class="nav-item "><a href="/animal_hospital" class="nav-link">動物醫院</a></li>
                 <li class="nav-item"><a href="/funeral" class="nav-link">寵物送別</a></li>
                 <li id="userPublishHistory" class="nav-item"></li>
                 <li id="userManagement" class="nav-item"></li>
-                <li id="loginAndRegist" class="nav-item">
-                    <a href="login_register" class="nav-link">登入註冊</a>
-                </li>
 
+                <!-- 下拉選單 -->
+                <li id="loginAndRegist" class="nav-item dropdown">
+                    <span class="nav-link dropdown-toggle" data-toggle="dropdown">會員登入</span>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/login_register">登入</a>
+                        <a class="dropdown-item" href="/publish">刊登送養</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
