--- a/src/main/resources/templates/public_shelter.html
+++ b/src/main/resources/templates/public_shelter.html
@@ -19,26 +19,37 @@
     <link rel="stylesheet" href="css/style.css">
     <!--  自訂樣式  -->
     <style>
+        /*網站背景紋理*/
         .main-img {
             background-image: url('/images/_main.png');
             background-repeat: repeat;
         }
 
-        .nav-img {
-            background-image: url('/images/_nav1.jpg');
+        /*橫幅圖片*/
+        .banner-img {
+            background-image: url('/images/_banner1.jpg');
             height: 300px !important;
         }
 
+        /*橫幅文字陰影*/
+        .text-shadow {
+            color: #fff !important;
+            text-shadow: 2px 2px 6px black, 3px 3px 2rem black, -3px -3px 2rem black !important;
+        }
+
+        /*按鈕樣式*/
         .btn.btn-primary {
             padding: 6px 20px;
             font-size: 1rem;
             letter-spacing: 0px;
+            opacity: 0.8;
         }
 
+        /*按鈕樣式-滑鼠掠過*/
         .btn.btn-primary:hover {
-            color: #fff;
-            background: #fcd601;
-            opacity: 0.5;
+            color: #fff !important;
+            background: #ffa500 !important;
+            opacity: 1;
         }
     </style>
 </head>
@@ -46,15 +57,15 @@
 <body>
 <div class="header-page"></div>
 <!-- END nav -->
-<section class="hero-wrap hero-wrap-2 img nav-img">
+<section class="hero-wrap hero-wrap-2 img banner-img">
     <div class="container">
         <div class="row no-gutters slider-text align-items-end" style="height: 300px;">
             <div class="col-md-9 ftco-animate pb-5">
-                <p class="breadcrumbs mb-2">
-                    <span>首頁 &gt;</span>
+                <p class="breadcrumbs mb-2 text-shadow">
+                    <span><a class="text-shadow" href="/index">首頁 &gt;</a></span>
                     <span class="ion-ios-arrow-forward"></span>
                 </p>
-                <h1 class="mb-0 bread">公立領養</h1>
+                <h1 class="mb-0 bread text-shadow">公立領養</h1>
             </div>
         </div>
     </div>
