按鈕樣式修正

--- a/src/main/resources/templates/login_register.html
+++ b/src/main/resources/templates/login_register.html
@@ -43,6 +43,8 @@
         .btn.btn-primary {
             font-size: 1rem;
             letter-spacing: 10px;
+            border: transparent !important;
+            background: #fcd601 !important;
             opacity: 0.8;
         }
 
