--- a/src/main/resources/templates/public_shelter.html
+++ b/src/main/resources/templates/public_shelter.html
@@ -41,7 +41,9 @@
         .btn.btn-primary {
             padding: 6px 20px;
             font-size: 1rem;
-            letter-spacing: 0px;
+            letter-spacing: 1px;
+            border: transparent !important;
+            background: #fcd601 !important;
             opacity: 0.8;
         }
 
