--- a/src/main/resources/templates/animal_food.html
+++ b/src/main/resources/templates/animal_food.html
@@ -27,36 +27,46 @@
         table {
             border-collapse: separate;
         }
+
         th, td {
             padding: 15px;
             text-align: center;
         }
+
         tr:nth-child(odd) {
             background-color: #ffffce;
         }
+
         tr:nth-child(even) {
             background-color: #ffffce;
         }
+
         th:first-child {
             border-radius: 10px 0px 0px 0px;
         }
+
         th:last-child {
             border-radius: 0px 10px 0px 0px;
         }
+
         tr:last-child td:first-child {
             border-radius: 0px 0px 0px 10px;
         }
+
         tr:last-child td:last-child {
             border-radius: 0px 0px 10px 0px;
         }
+
         .div-shadow {
-            box-shadow:3px 3px 9px grey;
+            box-shadow: 3px 3px 9px grey;
         }
+
         .block-27 ul li a, .block-27 ul li span {
             color: black;
             border: 2px solid #e6e6e6;
             background: #ffffce;
         }
+
         .page_show {
             padding: 40px 0;
             text-align: center;
@@ -107,29 +117,29 @@
          style="background-color: blanchedalmond; display: flex !important; position: static !important;">
     <div class="container" style="display: flex !important;">
         <div class="row d-md-flex">
-<!--
-            API串進的資料庫內容格式化程度不一，故棄用資料庫拉出來的內容當作select選項，預想是改以寫死方式回傳查詢條件
-            可以做的搜尋條件：
+            <!--
+                        API串進的資料庫內容格式化程度不一，故棄用資料庫拉出來的內容當作select選項，預想是改以寫死方式回傳查詢條件
+                        可以做的搜尋條件：
 
-            下拉選單
-                產品種類： {乾飼糧} | {半濕性飼糧} | {零食} | {罐頭} | {生鮮、冷凍} | {補助食品} | {潔牙骨} ※
-                產地： {中華民國} | {日本} | {韓國} | {美國} | {其他(有29個國家)}
-                適用寵物： {犬} | {貓} | {其他(一大堆)}
-                主要原料： {魚} | {雞} | {牛}
-            搜尋框(產品名稱)
+                        下拉選單
+                            產品種類： {乾飼糧} | {半濕性飼糧} | {零食} | {罐頭} | {生鮮、冷凍} | {補助食品} | {潔牙骨} ※
+                            產地： {中華民國} | {日本} | {韓國} | {美國} | {其他(有29個國家)}
+                            適用寵物： {犬} | {貓} | {其他(一大堆)}
+                            主要原料： {魚} | {雞} | {牛}
+                        搜尋框(產品名稱)
 
-            建議：
-            1. 類別說明
-            產品種類 ( ※資料整齊)
-            產地 ( ※資料整齊但國家太多，建議代表性做幾個就好 )
-            適用寵物、主要原料 ( ※資料庫的字串很亂，建議寫死後面用 %LIKE% 查 )
+                        建議：
+                        1. 類別說明
+                        產品種類 ( ※資料整齊)
+                        產地 ( ※資料整齊但國家太多，建議代表性做幾個就好 )
+                        適用寵物、主要原料 ( ※資料庫的字串很亂，建議寫死後面用 %LIKE% 查 )
 
-            2. 後面全部統一用 %LIKE% 邏輯去查寫起來是否比較方便?
-            3. 只是來串API的資料，如果很花時間，是不是斟酌做一部分就好
-            4. 資料來源 https://data.coa.gov.tw/open_detail.aspx?id=6GNl6qsdx4nx
-            5. 本頁網址 http://localhost:8080/animal_food
--->
-<!--            篩選區-->
+                        2. 後面全部統一用 %LIKE% 邏輯去查寫起來是否比較方便?
+                        3. 只是來串API的資料，如果很花時間，是不是斟酌做一部分就好
+                        4. 資料來源 https://data.coa.gov.tw/open_detail.aspx?id=6GNl6qsdx4nx
+                        5. 本頁網址 http://localhost:8080/animal_food
+            -->
+            <!--            篩選區-->
             <div class="col-md-auto p-3 m-auto ftco-animate" id="top">
                 <span>產地 :</span>
                 <select name="place" id="place">
@@ -142,12 +152,13 @@
                 <button id="search">搜尋</button>
             </div>
 
-<!--            顯示資料內容-->
-            <div class="col-md-auto p-3 m-auto ftco-animate div-shadow" style="background-color: #fff; border-radius: 10px 10px 10px 10px;">
+            <!--            顯示資料內容-->
+            <div class="col-md-auto p-3 m-auto ftco-animate div-shadow"
+                 style="background-color: #fff; border-radius: 10px 10px 10px 10px;">
                 <table class="table-hover text-center" id="test1Result">
                 </table>
             </div>
-<!--            顯示查詢資訊-->
+            <!--            顯示查詢資訊-->
             <div class="col-md-12 p-3 m-auto ftco-animate text-center">
                 <div class="block-27">
                     <p id="pageInfo"></p><br>
@@ -214,186 +225,186 @@
 <script src="js/main.js"></script>
 
 <script type="text/javascript">
-<!-- 全部都是未完成的功能測試 可以刪掉 -->
-var limit;
-var pages;
+    var limit;
+    var pages;
 
-$.ajax({//載入頁面先執行一次
-    type: "GET",
-    url: "/animal_foods",
-    success: function (data) {
-        getAnimalFoodList(data);
-    }
-});
-
-$.ajax({//載入下拉選單
-    type: "GET",
-    url: "/getAnimalFoodsComboBox",
-    success: function (data) {
-        console.log(data);
-        console.log(data[0]);
-        console.log(data[1]);
-
-        $("#place").append("<option value='全部'>全部</option>");
-        $("#category").append("<option value='全部'>全部</option>");
-
-        $.each(data[0], function (index, item) {
-            $("#place").append("<option value='"+item+"'>"+item+"</option>");
-        })
-        $.each(data[1], function (index, item) {
-            $("#category").append("<option value='"+item+"'>"+item+"</option>");
-        })
-    }
-});
-
-function getAnimalFoodList(data) {//秀出搜尋結果
-    $("#test1Result").empty();//清空元素
-
-    var title = "<tr class=''>" +
-        "<th class='table-primary'>產品名稱</th>" +
-        "<th class='table-secondary' style='width: 8%;'>產地</th>" +
-        "<th class='table-info' style='width: 10%;'>種類</th>" +
-        "<th class='table-success' style='width: 10%;'>重量</th>" +
-        "<th class='table-danger' style='width: 10%;'>適用</th>" +
-        "<th class='table-light' style='width: 22%;'>主要原料</th>" +
-        "<th class='table-warning' style='width: 22%;'>營養成份</th>" +
-        "</tr>";
-
-    $("#test1Result").append(title);//加入標題
-
-    $.each(data["results"], function (index, item) {
-        var html = "" +
-            "<tr>" +
-            "<td>"+item.name+"</td>" +
-            "<td>"+item.productionPlace+"</td>" +
-            "<td>"+item.category+"</td>" +
-            "<td>"+item.weight+"</td>" +
-            "<td>"+item.suitable+"</td>" +
-            "<td>"+item.material+"</td>" +
-            "<td>"+item.nutrient+"</td>" +
-            "</tr>";
-
-        $("#test1Result").append(html);//加入內容
-    })
-
-    pages = Math.ceil(data.total / data.limit);
-    console.log(data.offset / data.limit)
-    limit = data.limit;
-
-    if (data.total==0) {
-        $("#pageInfo").text("查無資料");
-    }else {
-        $("#pageInfo").text("總頁數:" + pages + "  總筆數:" + data.total);
-    }
-
-    pageSet(pages);
-
-    console.log("單頁筆數limit:" + data["limit"]);
-    console.log("跳過幾筆資料offset:" + data["offset"]);
-    console.log("總筆數:" + data["total"]);
-
-    $( "html,body").animate({ "scrollTop" : $("#top").offset().top }, 500);//捲動視窗至篩選欄
-    $.getScript('js/main.js');
-}
-
-//輸出頁碼
-function pageSet(pages) {
-    var pageHtml = '';
-    var start, end;
-    if (listPage < 6) {
-        start = 1;
-    } else {
-        start = listPage - 5;
-    }
-    if (listPage > pages - 5) {
-        end = pages;
-    } else {
-        end = listPage + 5;
-    }
-
-    if (listPage > 1) {
-        pageHtml += '<span>上一頁</span>';
-    }
-    for (var i = start, page_cur = ''; i <= end; i++) {
-        if (listPage == i) {
-            page_cur = 'page_cur';
-        } else {
-            page_cur = '';
-        }
-        pageHtml += '<span class="' + page_cur + '">' + i + '</span>';
-    }
-    if (listPage < pages) {
-        pageHtml += '<span>下一頁</span>';
-    }
-    $('.page_show').empty().append(pageHtml);
-}
-
-//點擊分頁執行
-$('body').on('click', '.page_show span', function () {
-    var $this = $(this);
-    if ($this.hasClass('page_cur')) {
-        return;
-    }
-    var page = $this.html();
-    if (page == '上一頁') {
-        listPage = listPage - 1;
-        changePage(listPage);
-        // goPrePage();
-    } else if (page == '下一頁') {
-        listPage = listPage + 1;
-        changePage(listPage);
-        // goNextPage();
-    } else {
-        listPage = parseInt(page);
-        changePage(listPage);
-    }
-    //根據頁碼獲取當前頁列表數據
-    pageSet(pages);
-});
-
-$("#search").click(function () {//搜尋按鈕被按下
-    changePage(listPage);
-})
-
-var listPage = 1;
-
-function changePage(page) {
-    var offset = limit * (page - 1);
-    console.log("offset"+offset);
-    console.log("page"+page);
-
-    var place = $("#place").val();
-    var category = $("#category").val();
-    var search = $("#search").val().trim();
-    var searchUrl = "";
-
-    console.log(place)
-    console.log(category)
-    console.log(search)
-
-    if (place!="全部") {
-        searchUrl += "&place=" + place;
-    }
-    if (category!="全部") {
-        searchUrl += "&category=" + category;
-    }
-
-    if (search!="") {
-        searchUrl += "&search=" + search;
-    }
-    var url = "/animal_foods?offset=" + limit * (page - 1) + searchUrl;
-    console.log(url);
-    $.ajax({
+    $.ajax({//載入頁面先執行一次
         type: "GET",
-        url: url,
+        url: "/animal_foods",
         success: function (data) {
             getAnimalFoodList(data);
         }
+    });
+
+    $.ajax({//載入下拉選單
+        type: "GET",
+        url: "/getAnimalFoodsComboBox",
+        success: function (data) {
+            console.log(data);
+            console.log(data[0]);
+            console.log(data[1]);
+
+            $("#place").append("<option value='全部'>全部</option>");
+            $("#category").append("<option value='全部'>全部</option>");
+
+            $.each(data[0], function (index, item) {
+                $("#place").append("<option value='" + item + "'>" + item + "</option>");
+            })
+            $.each(data[1], function (index, item) {
+                $("#category").append("<option value='" + item + "'>" + item + "</option>");
+            })
+        }
+    });
+
+    function getAnimalFoodList(data) {//秀出搜尋結果
+        $("#test1Result").empty();//清空元素
+
+        var title = "<tr class=''>" +
+            "<th class='table-primary'>產品名稱</th>" +
+            "<th class='table-secondary' style='width: 8%;'>產地</th>" +
+            "<th class='table-info' style='width: 10%;'>種類</th>" +
+            "<th class='table-success' style='width: 10%;'>重量</th>" +
+            "<th class='table-danger' style='width: 10%;'>適用</th>" +
+            "<th class='table-light' style='width: 22%;'>主要原料</th>" +
+            "<th class='table-warning' style='width: 22%;'>營養成份</th>" +
+            "</tr>";
+
+        $("#test1Result").append(title);//加入標題
+
+        $.each(data["results"], function (index, item) {
+            var html = "" +
+                "<tr>" +
+                "<td>" + item.name + "</td>" +
+                "<td>" + item.productionPlace + "</td>" +
+                "<td>" + item.category + "</td>" +
+                "<td>" + item.weight + "</td>" +
+                "<td>" + item.suitable + "</td>" +
+                "<td>" + item.material + "</td>" +
+                "<td>" + item.nutrient + "</td>" +
+                "</tr>";
+
+            $("#test1Result").append(html);//加入內容
+        })
+
+        pages = Math.ceil(data.total / data.limit);
+        console.log(data.offset / data.limit)
+        limit = data.limit;
+
+        if (data.total == 0) {
+            $("#pageInfo").text("查無資料");
+        } else {
+            $("#pageInfo").text("總頁數:" + pages + "  總筆數:" + data.total);
+        }
+
+        pageSet(pages);
+
+        console.log("單頁筆數limit:" + data["limit"]);
+        console.log("跳過幾筆資料offset:" + data["offset"]);
+        console.log("總筆數:" + data["total"]);
+
+        $("html,body").animate({"scrollTop": $("#top").offset().top}, 500);//捲動視窗至篩選欄
+        $.getScript('js/main.js');
+    }
+
+    //輸出頁碼
+    function pageSet(pages) {
+        var pageHtml = '';
+        var start, end;
+        if (listPage < 6) {
+            start = 1;
+        } else {
+            start = listPage - 5;
+        }
+        if (listPage > pages - 5) {
+            end = pages;
+        } else {
+            end = listPage + 5;
+        }
+
+        if (listPage > 1) {
+            pageHtml += '<span>上一頁</span>';
+        }
+        for (var i = start, page_cur = ''; i <= end; i++) {
+            if (listPage == i) {
+                page_cur = 'page_cur';
+            } else {
+                page_cur = '';
+            }
+            pageHtml += '<span class="' + page_cur + '">' + i + '</span>';
+        }
+        if (listPage < pages) {
+            pageHtml += '<span>下一頁</span>';
+        }
+        $('.page_show').empty().append(pageHtml);
+    }
+
+    //點擊分頁執行
+    $('body').on('click', '.page_show span', function () {
+        var $this = $(this);
+        if ($this.hasClass('page_cur')) {
+            return;
+        }
+        var page = $this.html();
+        if (page == '上一頁') {
+            listPage = listPage - 1;
+            changePage(listPage);
+            // goPrePage();
+        } else if (page == '下一頁') {
+            listPage = listPage + 1;
+            changePage(listPage);
+            // goNextPage();
+        } else {
+            listPage = parseInt(page);
+            changePage(listPage);
+        }
+        //根據頁碼獲取當前頁列表數據
+        pageSet(pages);
+    });
+
+    $("#search").click(function () {//搜尋按鈕被按下
+        listPage = 1;
+        changePage(listPage);
     })
-}
+
+    var listPage = 1;
+
+    function changePage(page) {
+        var offset = limit * (page - 1);
+        console.log("offset" + offset);
+        console.log("page" + page);
+
+        var place = $("#place").val();
+        var category = $("#category").val();
+        var search = $("#search").val().trim();
+        var searchUrl = "";
+
+        console.log(place)
+        console.log(category)
+        console.log(search)
+
+        if (place != "全部") {
+            searchUrl += "&place=" + place;
+        }
+        if (category != "全部") {
+            searchUrl += "&category=" + category;
+        }
+
+        if (search != "") {
+            searchUrl += "&search=" + search;
+        }
+        var url = "/animal_foods?offset=" + limit * (page - 1) + searchUrl;
+        console.log(url);
+        $.ajax({
+            type: "GET",
+            url: url,
+            success: function (data) {
+                getAnimalFoodList(data);
+            }
+        })
+    }
 
 
-$(".headerPage").load("header");//讀取導覽列
+    $(".headerPage").load("header");//讀取導覽列
 </script>
 
 </body>
