--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -144,18 +144,18 @@
 <div class="headerPage"></div>
 <!-- END nav -->
 <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');"
-		 data-stellar-background-ratio="0.5">
-	<div class="overlay"></div>
-	<div class="container">
-		<div class="row no-gutters slider-text align-items-end">
-			<div class="col-md-9 ftco-animate pb-5">
-				<p class="breadcrumbs mb-2"><span class="mr-2"><a href="/index">首頁 <i
-						class="ion-ios-arrow-forward"></i></a></span> <span>> 一般領養 <i
-						class="ion-ios-arrow-forward"></i></span></p>
-				<h1 class="mb-0 bread">一般領養</h1>
-			</div>
-		</div>
-	</div>
+         data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row no-gutters slider-text align-items-end">
+            <div class="col-md-9 ftco-animate pb-5">
+                <p class="breadcrumbs mb-2"><span class="mr-2"><a href="/index">首頁 <i
+                        class="ion-ios-arrow-forward"></i></a></span> <span>> 一般領養 <i
+                        class="ion-ios-arrow-forward"></i></span></p>
+                <h1 class="mb-0 bread">一般領養</h1>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- Modal -->
@@ -223,36 +223,40 @@
 <!--    </div>-->
 <!--</div>-->
 
+<section id="query_block" class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img"
+         style="background-color: blanchedalmond; display: flex !important; position: static !important;">
+    <div class="container" style="display: flex !important;">
+        <div class="row d-md-flex">
+            <!--            篩選區-->
+            <div class="col-md-auto p-3 m-auto ftco-animate" id="top">
+                <span>地區 :</span>
+                <select name="area" id="area">
+                </select>
+                <span>物種 :</span>
+                <select name="kind" id="kind">
+                </select>
+                <span>性別 :</span>
+                <select name="sex" id="sex">
+                </select>
+                <button id="search">搜尋</button>
+            </div>
 
-<hr>
-<div style="margin: auto; width: 800px;">
-    物種 :
-    <select name="animalKind" id="kind">
-        <option>不分種類</option>
-        <option>狗</option>
-        <option>貓</option>
-        <option>其他</option>
-    </select>
-    性別 :
-    <select name="animalSex" id="sex">
-        <option>不分種類</option>
-        <option>公</option>
-        <option>母</option>
-    </select>
-</div>
+            <!--            顯示資料內容-->
+            <div class="container">
+                <div class="row" id="test1Result">
+                </div>
+            </div>
 
-<section class="ftco-section bg-light">
-    <div class="container">
-        <div class="row" id="test1Result">
+            <!--            顯示查詢資訊-->
+            <div class="col-md-12 p-3 m-auto ftco-animate text-center">
+                <div class="block-27">
+                    <p id="pageInfo"></p><br>
+                    <div class="page_show"></div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
-
-
-<div style="margin: auto; width: 800px;">
-    <p id="pageInfo"></p><br>
-    <div class="page_show"></div>
-</div>
 
 
 <footer class="footer">
@@ -303,18 +307,35 @@
     var limit;
     var pages;
 
-    $.ajax({
+    $.ajax({//載入頁面先執行一次
         type: "GET",
         url: "/personalAnimals",
         success: function (data) {
             getAnimalList(data);
-            // console.log("單頁筆數:"+data["limit"]);
-            // console.log("跳過幾筆資料:"+data["offset"]);
-            // console.log("總筆數:"+data["total"]);
-            // console.log(data["results"]);
-            // console.log(data["results"][0]);
-            // console.log(data["results"][0]["animalId"]);
-            // console.log(data["results"].length)
+        }
+    });
+
+    $.ajax({//載入下拉選單
+        type: "GET",
+        url: "/getPersonalAnimalsComboBox",
+        success: function (data) {
+            console.log(data);
+            console.log(data[0]);
+            console.log(data[1]);
+
+            $("#area").append("<option value='全部'>全部</option>");
+            $("#kind").append("<option value='全部'>全部</option>");
+            $("#sex").append("<option value='全部'>全部</option>");
+
+            $.each(data[0], function (index, item) {
+                $("#area").append("<option value='" + item + "'>" + item + "</option>");
+            })
+            $.each(data[1], function (index, item) {
+                $("#kind").append("<option value='" + item + "'>" + item + "</option>");
+            })
+            $.each(data[2], function (index, item) {
+                $("#sex").append("<option value='" + item + "'>" + item + "</option>");
+            })
         }
     });
 
@@ -350,13 +371,19 @@
         console.log(data.offset / data.limit)
         limit = data.limit;
 
-        $("#pageInfo").text("總頁數:" + pages + "  總筆數:" + data.total);
+        if (data.total == 0) {
+            $("#pageInfo").text("查無資料");
+        } else {
+            $("#pageInfo").text("總頁數:" + pages + "  總筆數:" + data.total);
+        }
+
         pageSet(pages);
 
         console.log("單頁筆數limit:" + data["limit"]);
         console.log("跳過幾筆資料offset:" + data["offset"]);
         console.log("總筆數:" + data["total"]);
 
+        $("html,body").animate({"scrollTop": $("#top").offset().top}, 500);//捲動視窗至篩選欄
         $.getScript('js/main.js');
     }
 
@@ -444,15 +471,44 @@
         //根據頁碼獲取當前頁列表數據
         pageSet(pages);
     });
+
+    $("#search").click(function () {//搜尋按鈕被按下
+        listPage = 1;
+        changePage(listPage);
+    })
+
     var listPage = 1;
 
     function changePage(page) {
         var offset = limit * (page - 1);
-        console.log(offset);
-        console.log(page);
+        console.log("offset" + offset);
+        console.log("page" + page);
+
+        var area = $("#area").val();
+        var kind = $("#kind").val();
+        var sex = $("#sex").val();
+        var searchUrl = "";
+
+        console.log(area);
+        console.log(kind);
+        console.log(sex);
+
+        if (area != "全部") {
+            searchUrl += "&area=" + area;
+        }
+        if (kind != "全部") {
+            searchUrl += "&kind=" + kind;
+        }
+
+        if (sex != "全部") {
+            searchUrl += "&sex=" + sex;
+        }
+        var url = "/personalAnimals?offset=" + limit * (page - 1) + searchUrl;
+
+
         $.ajax({
             type: "GET",
-            url: "/personalAnimals?offset=" + limit * (page - 1),
+            url: url,
             success: function (data) {
                 getAnimalList(data);
             }
