--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
     <title>header</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -137,6 +136,9 @@
                         <a href="#" class="d-flex align-items-center justify-content-center"></a>
                     </p>
                 </div>
+                <div class="py-1">
+                        <a href="#" id="login_stat" class="d-flex align-items-center justify-content-center" style="color: white; visibility: hidden;">會員登入中</a>
+                </div>
             </div>
         </div>
     </div>
@@ -165,21 +167,24 @@
                 <li class="nav-item"><a href="/missing" class="nav-link">走失協尋</a></li>
                 <li class="nav-item "><a href="/animal_hospital" class="nav-link">動物醫院</a></li>
                 <li class="nav-item"><a href="/funeral" class="nav-link">寵物送別</a></li>
-                <li id="userPublishHistory" class="nav-item"></li>
-                <li id="userManagement" class="nav-item"></li>
 
                 <!-- 下拉選單 -->
                 <li id="loginAndRegist" class="nav-item dropdown">
                     <span class="nav-link dropdown-toggle" data-toggle="dropdown">會員登入</span>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/login_register">登入</a>
-                        <a class="dropdown-item" href="/publish">刊登送養</a>
+                        <a id="login" class="dropdown-item" href="/login_register" style="display: contents;">登入</a>
+                        <a id="sign_out" class="dropdown-item" href="/sign_out" style="display: none;">登出</a>
+                        <a id="userManagement" class="dropdown-item" href="/user_management" style="display: none;">會員資料修改</a>
+                        <a id="publish" class="dropdown-item" href="/publish" style="display: none;">會員刊登送養</a>
+                        <a id="userPublishHistory" class="dropdown-item" href="/user_publish_history" style="display: none;">送養資訊管理</a>
                     </div>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+<!-- 判斷 登入前/登入後 顯示或隱藏特定網頁元素 -->
+<script src="js/checkLogin.js"></script>
 
 </body>
 </html>
