--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -145,9 +145,20 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
+                    <input id="createName" type="text" class="form-control" placeholder="名字">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <input id="createBacterin" type="text" class="form-control" placeholder="疫苗">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
                     <input id="createRemark" type="text" class="form-control" placeholder="備註">
                 </div>
             </div>
+
             <div class="col-md-6">
                 <div class="form-group">
                     <input type="file" id="fileForm"/>
@@ -174,7 +185,7 @@
                 <h2 id="registStatus" class="mb-4">協尋資料</h2>
                 <form class="appointment">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div id="missingInput" class="col-md-12">
                             <div class="form-group">
                                 <div class="form-field">
                                     <div class="select-wrap">
@@ -202,7 +213,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input id="missingBodyShape" type="text" class="form-control" placeholder="體型">
+                                    <input id="missingBody" type="text" class="form-control" placeholder="體型">
 
                                 </div>
                             </div>
@@ -238,7 +249,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="file" id="missingFileForm"/>
+                                    <input type="file" id="missingAnimalPhoto"/>
 
                                 </div>
                             </div>
